--- a/TVShows/Podfile
+++ b/TVShows/Podfile
@@ -1,10 +1,13 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
+use_frameworks!
 
 target 'TVShows' do
-  # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
 
-  # Pods for TVShows
+	pod 'Alamofire'
+
+	pod 'CodableAlamofire'
+
+	pod 'SVProgressHUD'
+
 
 end
