--- a/TVShows/Podfile
+++ b/TVShows/Podfile
@@ -8,6 +8,7 @@ target 'TVShows' do
 	pod 'PromiseKit/CorePromise', '~> 6.0'
 	pod 'PromiseKit/Alamofire'
   pod 'Kingfisher', '~> 4.2'
-  pod 'KeychainSwift',
+  pod 'KeychainSwift'
+  pod 'SkyFloatingLabelTextField', '~> 3.0'
 
 end
