--- a/TVShows/Podfile
+++ b/TVShows/Podfile
@@ -10,5 +10,6 @@ target 'TVShows' do
   pod 'Kingfisher', '~> 4.2'
   pod 'KeychainSwift'
   pod 'SkyFloatingLabelTextField', '~> 3.0'
+  pod 'TransitionButton'
 
 end
